fixed curtain z-index

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -168,7 +168,7 @@ $desktops: 1051px;
 	position: absolute;
 	left:$left;
 	top:$top;
-	z-index:999;
+	z-index:9999;
 }
 
 .cover_1{
